Fixes automatic linebreak of timespan by defining text-align and margin correctly.

--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -14,6 +14,10 @@
 
 .timespan
     grid-column: span 2
+    width: 90%
+    margin-left: auto
+    margin-right: 0.5em
+    text-align: right
 
 .pic
     grid-column: span 2
